--- a/SzeregowanieZadan/SzeregowanieZadan.csproj
+++ b/SzeregowanieZadan/SzeregowanieZadan.csproj
@@ -49,6 +49,8 @@
     <Compile Include="Config.cs" />
     <Compile Include="Edge.cs" />
     <Compile Include="Graph.cs" />
+    <Compile Include="Interval.cs" />
+    <Compile Include="Machine.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RandomGen.cs" />
